// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`elements/content-sidebar/SidebarNavButton should render nav button properly 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  position="middle-left"
  text="foo"
  theme="default"
>
  <PlainButton
    className="bcs-nav-btn"
    type="button"
  />
</Tooltip>
`;

exports[`elements/content-sidebar/SidebarNavButton should render nav button properly when selected 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  position="middle-left"
  text="foo"
  theme="default"
>
  <PlainButton
    className="bcs-nav-btn bcs-nav-btn-is-selected"
    type="button"
  />
</Tooltip>
`;
